# xicor

./: Cargo.toml  README.md
src/: lib.rs  tests.rs  xicor.rs
