[package]
name = "xicor"
version = "0.1.0"
edition = "2021"
authors = ["UnsuccessfulLaminator"]
description = "An implementation of Sourav Chatterjee's xi-correlation coefficient"
keywords = ["statistics", "correlation"]
categories = ["algorithms", "mathematics", "science"]
license = "MIT / Apache-2.0"
repository = "https://github.com/UnsuccessfulLaminator/xicor-rs"
readme = "README.md"

[dependencies]
num-traits = "0.2.19"
ordered-float = "4.6.0"
